--- a/Random Choice Picker/index.html
+++ b/Random Choice Picker/index.html
@@ -11,9 +11,7 @@
     <div class="container">
         <h3>Enter all of the choices divided by a comma.
         <br>Press enter when done.</h3>
-        <textarea placeholder="Enter choices here.." id="textarea">
-            
-        </textarea>
+        <textarea placeholder="Enter choices here.." id="textarea"></textarea>
         <div id="tags">
             <span class="tag">Choice 1</span>
             <span class="tag">Choice 2</span>
